// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExampleCard should display correctly as a table card 1`] = `
<div
  class="md-paper md-paper--1 md-card md-card--table md-background--card md-cell md-cell--12"
  id="table-example"
  tabindex="-1"
>
  <div
    class="md-card-title md-card-title--primary quick-link"
  >
    <h2
      class="md-card-title--title md-card-title--large md-text"
    >
      <div
        class="quick-link__container"
      >
        Table Example
        <a
          class="quick-link__link quick-link__link--title"
          href="#table-example"
        >
          <i
            class="md-icon material-icons"
          >
            link
          </i>
        </a>
      </div>
    </h2>
    <button
      class="md-btn md-btn--icon md-pointer--hover md-inline-block md-collapser md-collapser--card"
      type="button"
    >
      <div
        class="md-ink-container"
      >
        <span
          aria-hidden="true"
        />
      </div>
      <div
        class="md-tooltip-container"
      >
        <span
          aria-hidden="true"
        />
      </div>
      <svg
        class="md-icon md-text--inherit"
        focusable="false"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      />
    </button>
  </div>
  <table
    class="md-data-table"
  >
    <thead
      class="md-table-header"
    >
      <tr
        class="md-table-row"
      >
        <th
          class="md-table-column md-table-column--header"
        >
          Hello!
        </th>
      </tr>
    </thead>
    <tbody
      class="md-table-body"
    >
      <tr
        class="md-table-row"
      >
        <td
          class="md-table-column md-table-column--header"
        >
          Hello!
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ExampleCard should display correctly as a table card 2`] = `
<div
  class="md-paper md-paper--1 md-card md-card--table md-background--card md-cell md-cell--12"
  id="table-example"
  tabindex="-1"
>
  <div
    class="md-card-title md-card-title--primary quick-link"
  >
    <h2
      class="md-card-title--title md-card-title--large md-text"
    >
      <div
        class="quick-link__container"
      >
        Table Example
        <a
          class="quick-link__link quick-link__link--title"
          href="#table-example"
        >
          <i
            class="md-icon material-icons"
          >
            link
          </i>
        </a>
      </div>
    </h2>
    <button
      class="md-btn md-btn--icon md-pointer--hover md-inline-block md-collapser md-collapser--card"
      type="button"
    >
      <div
        class="md-ink-container"
      >
        <span
          aria-hidden="true"
        />
      </div>
      <div
        class="md-tooltip-container"
      >
        <span
          aria-hidden="true"
        />
      </div>
      <svg
        class="md-icon md-text--inherit"
        focusable="false"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      />
    </button>
  </div>
  <section
    class="md-card-text"
  >
    <div
      class="markdown-container md-text-container examples-page__card__description"
    >
      <p>
        Some 
        <strong>
          description
        </strong>
         
        <em>
          markdown
        </em>
      </p>
      

    </div>
  </section>
  <table
    class="md-data-table"
  >
    <thead
      class="md-table-header"
    >
      <tr
        class="md-table-row"
      >
        <th
          class="md-table-column md-table-column--header"
        >
          Hello!
        </th>
      </tr>
    </thead>
    <tbody
      class="md-table-body"
    >
      <tr
        class="md-table-row"
      >
        <td
          class="md-table-column md-table-column--header"
        >
          Hello!
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ExampleCard should display correctly with a description 1`] = `
<div
  class="md-paper md-paper--1 md-card md-background--card md-cell md-cell--12"
  id="second-example"
  tabindex="-1"
>
  <div
    class="md-card-title md-card-title--primary quick-link"
  >
    <h2
      class="md-card-title--title md-card-title--large md-text"
    >
      <div
        class="quick-link__container"
      >
        Second Example
        <a
          class="quick-link__link quick-link__link--title"
          href="#second-example"
        >
          <i
            class="md-icon material-icons"
          >
            link
          </i>
        </a>
      </div>
    </h2>
    <button
      class="md-btn md-btn--icon md-pointer--hover md-inline-block md-collapser md-collapser--card"
      type="button"
    >
      <div
        class="md-ink-container"
      >
        <span
          aria-hidden="true"
        />
      </div>
      <div
        class="md-tooltip-container"
      >
        <span
          aria-hidden="true"
        />
      </div>
      <svg
        class="md-icon md-text--inherit"
        focusable="false"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      />
    </button>
  </div>
  <section
    class="md-card-text"
  >
    <div
      class="markdown-container md-text-container examples-page__card__description"
    >
      <pre>
        <code>
          # Second Example
That contains some markdown!

- one
- two
- three

&gt; some note

        </code>
      </pre>
    </div>
    <h1>
      Hello, World!
    </h1>
    <div>
      This should have some content...
    </div>
  </section>
</div>
`;

exports[`ExampleCard should display correctly without a description 1`] = `
<div
  class="md-paper md-paper--1 md-card md-background--card md-cell md-cell--12"
  id="first-example"
  tabindex="-1"
>
  <div
    class="md-card-title md-card-title--primary quick-link"
  >
    <h2
      class="md-card-title--title md-card-title--large md-text"
    >
      <div
        class="quick-link__container"
      >
        First Example
        <a
          class="quick-link__link quick-link__link--title"
          href="#first-example"
        >
          <i
            class="md-icon material-icons"
          >
            link
          </i>
        </a>
      </div>
    </h2>
    <button
      class="md-btn md-btn--icon md-pointer--hover md-inline-block md-collapser md-collapser--card"
      type="button"
    >
      <div
        class="md-ink-container"
      >
        <span
          aria-hidden="true"
        />
      </div>
      <div
        class="md-tooltip-container"
      >
        <span
          aria-hidden="true"
        />
      </div>
      <svg
        class="md-icon md-text--inherit"
        focusable="false"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      />
    </button>
  </div>
  <section
    class="md-card-text"
  >
    <div />
  </section>
</div>
`;
